The end of refactor Java->Vavr