@@ -7,7 +7,6 @@ import com.sciamus.contractanalyzer.domain.reporting.checks.ReportRepository;
 import com.sciamus.contractanalyzer.domain.reporting.checks.ReportService;
 import com.sciamus.contractanalyzer.domain.reporting.idGenerator.ReportIdGenerator;
 import com.sciamus.contractanalyzer.domain.reporting.suites.SuiteReport;
-import com.sciamus.contractanalyzer.domain.reporting.suites.SuiteReportMapper;
 import com.sciamus.contractanalyzer.domain.reporting.suites.SuitesReportsRepository;
 import com.sciamus.contractanalyzer.domain.suites.*;
 import org.junit.jupiter.api.BeforeEach;
@@ -15,14 +14,13 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.keycloak.KeycloakSecurityContext;
-import org.keycloak.representations.AccessToken;
 import org.mockito.AdditionalAnswers;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.net.MalformedURLException;
 import java.net.URL;
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -48,13 +46,13 @@ public class SuiteTest {
     public void init() {
 
         final CurrentUserService currentUserService = new CurrentUserService(keycloakSecurityContextMock);
-        List<RestContractCheck> restContractChecks = new ArrayList<>();
+        List<RestContractCheck> restContractChecks = List.of();
         final CheckRepository checkRepository = new CheckRepository(restContractChecks, currentUserService);
         final CheckReportMapper checkReportMapper = new CheckReportMapper(currentUserService);
         final ReportIdGenerator reportIdGenerator = new ReportIdGenerator(reportRepositoryMock);
         final ReportService reportService = new ReportService(reportRepositoryMock, reportIdGenerator);
         final ContractChecksService contractChecksService = new ContractChecksService(checkRepository, reportService, checkReportMapper);
-        List<CheckSuite> checkSuites = List.of(new BasicSuite(contractChecksService, checkRepository, checkReportMapper));
+        java.util.List<CheckSuite> checkSuites = Arrays.asList(new BasicSuite(contractChecksService, checkRepository, checkReportMapper));
         final SuitesRepository suitesRepository = new SuitesRepository(checkSuites);
         suitesService = new SuitesService(suitesReportsRepositoryMock, suitesRepository);
     }
@@ -86,9 +84,8 @@ public class SuiteTest {
     @DisplayName("Suite report with bad URL crashed")
     public void suiteReportBadURLTest() {
         // when
-        Exception exception = assertThrows(RuntimeException.class, () -> {
-            suitesService.runSuiteAndAddToRepository("Basic Suite", "httttp://localhost:8080");
-        });
+        Exception exception = assertThrows(RuntimeException.class, () ->
+                suitesService.runSuiteAndAddToRepository("Basic Suite", "httttp://localhost:8080"));
 
         // then
         assertThat(exception).hasMessageContaining("Bad URL!");
@@ -98,9 +95,8 @@ public class SuiteTest {
     @DisplayName("Suite report's unknown name crashed")
     public void suiteReportBadNameTest() {
         // when
-        Exception exception = assertThrows(SuiteNotFoundException.class, () -> {
-            suitesService.runSuiteAndAddToRepository("Test Suite", "http://localhost:8080");
-        });
+        Exception exception = assertThrows(SuiteNotFoundException.class, () ->
+            suitesService.runSuiteAndAddToRepository("Test Suite", "http://localhost:8080"));
 
         // then
         assertThat(exception).hasMessageContaining("Test Suite");
